--- a/public/css/int.styles.css
+++ b/public/css/int.styles.css
@@ -154,6 +154,8 @@ PAGE PRELOADER
 .nav-contextual nav.nav-pills a.nav-link{
   display: block !important;
   border-radius: 2em;
+  padding:3px 3px 3px 15px;
+  font-size: .9em;
 }
 .nav-contextual nav.nav-pills a.active{
   border:1px solid #0782a8;
