--- a/public/css/int.styles.css
+++ b/public/css/int.styles.css
@@ -142,7 +142,7 @@ PAGE PRELOADER
   width:100%;
   padding:10px 0;
   text-align: center;
-  position: absolute;
+  /* position: absolute; */
   bottom:20px;
 }
 
@@ -580,4 +580,9 @@ div.box-actividad[role="progressbar"]::before {
   margin-top: 5%; 
   display: none; 
   text-align :center;
+}
+
+th.hsmall{
+  font-size: 0.7em;
+  text-align:center;
 }
